--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
   
-  <header class="header">    
+  <header class="header">      
     <div class="header-top-block">
       <div class="container">
         <div class="row">
@@ -43,11 +43,60 @@
             </a>
           </div>
           <div class="header-right-column col-lg-3 col-md-4 col-sm-4 col-xs-7">                      
-            <a href="" class="cart-block">
+            <a class="cart-block">
               <i class="icon icon-cart"></i>
               <span class="cart-title">5</span>
             </a>
             <a class="phone" href="tel:+88000000000">8 (800) 000-00-00</a>           
+          </div>
+        </div>
+        <div class="cart">
+          <p class="cart-head">У вас в корзине 2 товара<br> на сумму 12 000р.</p>
+          <div class="cart-body">
+            <ul class="cart-list">
+              <li class="cart-item clearfix">
+                <i class="icon icon-cart-close"></i>
+                <div class="cart-img-wrap">
+                  <img src="images/cart-photo.jpg" alt="">                 
+                </div>
+                  <div class="cart-text-wrap">
+                    <p class="cart-name">Постельное белье "Two"</p>
+                    <div class="cart-price-block clearfix">
+                      <p class="cart-price"> 7 500 р.</p>
+                      <p class="delete-link">Удалить</p>
+                    </div>
+                  </div>
+              </li>
+              <li class="cart-item clearfix">
+                <i class="icon icon-cart-close"></i>
+                <div class="cart-img-wrap">
+                  <img src="images/cart-photo.jpg" alt="">                 
+                </div>
+                  <div class="cart-text-wrap">
+                    <p class="cart-name">Постельное белье "Two-Two"</p>
+                    <div class="cart-price-block clearfix">
+                      <p class="cart-price"> 17 500 р.</p>
+                      <p class="delete-link">Удалить</p>
+                    </div>
+                  </div>
+              </li>
+              <li class="cart-item clearfix">
+                <i class="icon icon-cart-close"></i>
+                <div class="cart-img-wrap">
+                  <img src="images/cart-photo.jpg" alt="">                 
+                </div>
+                  <div class="cart-text-wrap">
+                    <p class="cart-name">Постельное белье "Two-Two"</p>
+                    <div class="cart-price-block clearfix">
+                      <p class="cart-price"> 17 500 р.</p>
+                      <p class="delete-link">Удалить</p>
+                    </div>
+                  </div>
+              </li>
+            </ul>
+          </div>
+          <div class="cart-footer">
+            <a href="" class="cart-button">Перейти в корзину</a>
           </div>
         </div>
       </div>
