--- a/app/index.html
+++ b/app/index.html
@@ -129,9 +129,57 @@
     </div>
   </header>
   
-  <main class="main">
+  <main class="main main-page">
+    <section class="section-1 slider-wrap">
+      <div class="slider-center-block">
+        <h1 class="title">Скидка 30% <br> на новую коллекцию</h1>
+        <a href="" class="title-button">Посмотреть коллекцию</a>
+      </div>
+      <div class="head-slider">
+        <div class="head-slider-item">
+          <img class="slider-big-img" src="images/img-1.jpg" alt="">
+          <img class="slider-min-img" src="images/img-1-min.jpg" alt="">
+        </div>
+        <div class="head-slider-item">
+          <img class="slider-big-img" src="images/img-1.jpg" alt="">
+          <img class="slider-min-img" src="images/img-1-min.jpg" alt="">
+        </div>
+        <div class="head-slider-item">
+          <img class="slider-big-img" src="images/img-1.jpg" alt="">
+          <img class="slider-min-img" src="images/img-1-min.jpg" alt="">
+        </div>
+      </div>
+    </section>
 
-
+    <section class="section-2">
+      <div class="container">
+        <div class="row">
+          <div class="content">
+            <h2 class="content-title">Категории товаров</h2>
+            <ul class="content-list">
+              <li class="content-item bg-1">                                
+                <a href="">Постельное белье</a>          
+              </li>      
+              <li class="content-item bg-2">                
+                <a href="">Cоздать свой комплект</a>               
+              </li>
+              <li class="content-item bg-3">                
+                <a href="">Покрывала и пледы</a>               
+              </li>
+              <li class="content-item bg-4">                                
+                <a href="">Подушки и одеяла</a>          
+              </li>      
+              <li class="content-item bg-5">                
+                <a href="">Полотенца и халаты</a>               
+              </li>
+              <li class="content-item bg-6">                
+                <a href="">Аксессуары</a>               
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>   
