section-3 desctop dev

--- a/app/index.html
+++ b/app/index.html
@@ -180,6 +180,37 @@
         </div>
       </div>
     </section>
+
+    <section class="section-3">
+      <div class="container">
+        <div class="row">
+          <div class="content">
+            <h2 class="content-title">Наш instagram</h2>
+            <div class="content-wrap">
+              <div class="content-img-wrap img-wrap-1">
+                <img src="images/inst-1.jpg" alt="">
+              </div>
+              <div class="content-img-wrap img-wrap-2">
+                <img src="images/inst-2.jpg" alt="">
+              </div>
+              <div class="content-img-wrap img-wrap-3">
+                <img src="images/inst-3.jpg" alt="">
+              </div>
+               <div class="content-img-wrap img-wrap-4">
+                <img src="images/inst-4.jpg" alt="">
+              </div>
+              <div class="content-img-wrap img-wrap-5">
+                <img src="images/inst-5.jpg" alt="">
+              </div>
+              <div class="content-img-wrap img-wrap-6">
+                <img src="images/inst-6.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>      
+
   </main>
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>   
