--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,7 @@
         <div class="row">
           <div class="content">
             <h2 class="content-title">Наш instagram</h2>
-            <div class="content-wrap">
+            <div class="content-wrap responsive-slider">
               <div class="content-img-wrap img-wrap-1">
                 <img src="images/inst-1.jpg" alt="">
               </div>
