--- a/app/index.html
+++ b/app/index.html
@@ -206,10 +206,123 @@
                 <img src="images/inst-6.jpg" alt="">
               </div>
             </div>
+              <div class="button-wrap">
+              <a href="" class="title-button title-button-color">Посмотреть профиль</a>
+            </div>
+          </div>          
+        </div>
+      </div>
+    </section> 
+
+    <section class="section-4">
+      <div class="container">
+        <div class="row">
+          <div class="content">
+            <h2 class="content-title">Нам доверяют</h2>
+            <div class="slider-content">
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                  <p class="feedback-text">
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Praesent vel consequat mi.
+                    Donec gravida lectus justo, at tempor
+                    lectus ultrices non. Vivamus at dolor
+                    congue, auctor tellus at, faucibus dolor.
+                    Nunc vehicula gravida quam, et blandit
+                    odio egestas pulvinar. Fusce vel velit purus.
+                    Nulla eu venenatis dolor, ut placerat est.
+                  </p>
+                </div>                
+              </div>
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                  <p class="feedback-text">
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Praesent vel consequat mi.
+                    Donec gravida lectus justo, at tempor
+                    lectus ultrices non. Vivamus at dolor
+                    congue, auctor tellus at, faucibus dolor.
+                    Nunc vehicula gravida quam, et blandit
+                    odio egestas pulvinar. Fusce vel velit purus.
+                    Nulla eu venenatis dolor, ut placerat est.
+                  </p>
+                </div>
+              </div>
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                  <p class="feedback-text">
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Praesent vel consequat mi.
+                    Donec gravida lectus justo, at tempor
+                    lectus ultrices non. 
+                  </p>
+                </div>                
+              </div>
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                  <p class="feedback-text">
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Praesent vel consequat mi.
+                    Donec gravida lectus justo, at tempor
+                    lectus ultrices non. Vivamus at dolor
+                    congue, auctor tellus at, faucibus dolor.
+                    Nunc vehicula gravida quam, et blandit
+                    odio egestas pulvinar. Fusce vel velit purus.
+                    Nulla eu venenatis dolor, ut placerat est.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </section>      
+    </section> 
+
+     <section class="section-5">
+      <div class="container">
+        <div class="row">
+          <div class="content">
+            <h3 class="block-title">Подпишись на новости и получи подарок!</h3>
+            <form action="" class="main-form">
+              <input type="text" class="mail-input" placeholder="Ваш e-mail">
+              <input class="title-button title-button-color" type="submit" value="Подписаться">
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>                
 
   </main>
     <!-- build:js scripts/vendor.js -->
