catalog filter button dev

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -167,7 +167,7 @@
                 <li class="page-menu-item"><a href="#">Сатин Delux</a></li>
                 <li class="page-menu-item"><a href="#">Жаккард</a></li>
                 <li class="page-menu-item"><a href="#">Жатый шелк</a></li>
-                <li class="page-menu-item"><a href="#">Гепор, кружеао</a></li>
+                <li class="page-menu-item"><a href="#">Гепор, кружево</a></li>
                 <li class="page-menu-item"><a href="#">Бамбук</a></li>
                 <li class="page-menu-item"><a href="#">Ранфорс</a></li>                
               </ul>
@@ -232,7 +232,10 @@
                     <option value="4">100*200</option>                    
                   </select>
                 </li>
-              </ul>
+                <li class="filter-item hidden-sm">
+                  <input type="submit" class="color-button" value="Отфильтровать">
+                </li>
+              </ul>              
             </form>
           </div>
         </div> 
