--- a/app/catalog.html
+++ b/app/catalog.html
@@ -237,6 +237,108 @@
                 </li>
               </ul>              
             </form>
+            <div class="catalog-block">
+              <ul class="catalog-list clearfix">
+                <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
+                  <div class="img-wrap">
+                    <a href="#">
+                      <img src="images/calalog-img.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="info-block">
+                    <a href="#">
+                      <span class="art">Артикул 17555</span>
+                      <span class="name">Постельное белье "Two"</span>
+                      <span class="price">7 600 p.</span>
+                    </a>  
+                  </div>
+                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                </li>
+                <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
+                  <div class="img-wrap">
+                    <a href="#">
+                      <img src="images/calalog-img.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="info-block">
+                    <a href="#">
+                      <span class="art">Артикул 17555</span>
+                      <span class="name">Постельное белье "Белоснежкa"</span>
+                      <span class="price">7 600 p.</span>
+                    </a>  
+                  </div>
+                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                </li>
+                <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
+                  <div class="img-wrap">
+                    <a href="#">
+                      <img src="images/calalog-img.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="info-block">
+                    <a href="#">
+                      <span class="art">Артикул 17555</span>
+                      <span class="name">Постельное белье "Two"</span>
+                      <span class="price">7 600 p.</span>
+                    </a>  
+                  </div>
+                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                </li>
+             
+                <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
+                  <div class="img-wrap">
+                    <a href="#">
+                      <img src="images/calalog-img.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="info-block">
+                    <a href="#">
+                      <span class="art">Артикул 17555</span>
+                      <span class="name">Постельное белье "Two"</span>
+                      <span class="price">7 600 p.</span>
+                    </a>  
+                  </div>
+                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                </li>
+                <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
+                  <div class="img-wrap">
+                    <a href="#">
+                      <img src="images/calalog-img.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="info-block">
+                    <a href="#">
+                      <span class="art">Артикул 17555</span>
+                      <span class="name">Постельное белье "Two"</span>
+                      <span class="price">7 600 p.</span>
+                    </a>  
+                  </div>
+                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                </li>
+                <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
+                  <div class="img-wrap">
+                    <a href="#">
+                      <img src="images/calalog-img.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="info-block">
+                    <a href="#">
+                      <span class="art">Артикул 17555</span>
+                      <span class="name">Постельное белье "Two"</span>
+                      <span class="price">7 600 p.</span>
+                    </a>  
+                  </div>
+                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                </li>
+              </ul>
+              <ul class="paging">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>...</li>
+                <li>15</li>
+              </ul>
+            </div>
           </div>
         </div> 
       </div>
