right column product dev

--- a/app/product.html
+++ b/app/product.html
@@ -166,7 +166,60 @@
             </div>
           </div>
           <div class="right-column">
-            
+            <div class="description-block">
+              <p class="art">Артикул 17222</p>
+              <h3 class="product-title">Леопардовое постельное белье</h3>
+              <div class="info-block">
+                <p class="info-title">Цвет</p>
+                <p class="info-text">Светло-серый и черный</p>
+              </div>
+              <div class="info-block">
+                <p class="info-title">Размер</p>
+                <p class="info-text">Наволочки (4шт) 70*70</p>
+                <p class="info-text">Простынь, мм: 230*230</p>
+                <p class="info-text">Пододеяльник, мм: 230*230</p>
+                <p class="info-text">Пододеяльник, мм: 230*230</p>
+              </div>
+              <ul class="product-filter-list">
+                <li class="product-filter-item">
+                  <p class="filter-title info-title">Пододеяльник</p>
+                  <select>
+                    <option value="1">110*215</option>                    
+                    <option value="2">110*220</option>
+                    <option value="3">110*225</option>
+                    <option value="4">110*230</option>                    
+                  </select>
+                </li>
+                <li class="product-filter-item">
+                  <p class="filter-title info-title">Простынь</p>
+                  <select>
+                    <option value="1">240*260</option>                    
+                    <option value="2">110*220</option>
+                    <option value="3">110*225</option>
+                    <option value="4">110*230</option>                    
+                  </select>
+                </li>
+                <li class="product-filter-item">
+                  <p class="filter-title info-title">Наволочки</p>
+                  <select>
+                    <option value="1">70*70</option>                    
+                    <option value="2">110*220</option>
+                    <option value="3">110*225</option>
+                    <option value="4">110*230</option>                    
+                  </select>
+                </li>
+              </ul>
+              <ul class="counter-list">                
+                <li class="counter-item">
+                  <p class="info-title">Количество</p>
+                  <div class="counter-wrap clearfix">
+                    <a class="left-btn">-</a>
+                    <p class="counter">1</p>
+                    <a class="right-btn">+</a>
+                  </div>  
+                </li>
+              </ul>
+            </div>
           </div>
         </div> 
       </div>
