product slider dev

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -252,7 +252,7 @@
                       <span class="price">7 600 p.</span>
                     </a>  
                   </div>
-                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                  <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>
                 </li>
                 <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
                   <div class="img-wrap">
@@ -267,7 +267,7 @@
                       <span class="price">7 600 p.</span>
                     </a>  
                   </div>
-                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                  <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>
                 </li>
                 <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
                   <div class="img-wrap">
@@ -282,7 +282,7 @@
                       <span class="price">7 600 p.</span>
                     </a>  
                   </div>
-                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                  <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>
                 </li>
              
                 <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
@@ -298,7 +298,7 @@
                       <span class="price">7 600 p.</span>
                     </a>  
                   </div>
-                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                  <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>
                 </li>
                 <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
                   <div class="img-wrap">
@@ -313,7 +313,7 @@
                       <span class="price">7 600 p.</span>
                     </a>  
                   </div>
-                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                  <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>
                 </li>
                 <li class="catalog-item col-xs-6 col-sm-6 col-md-4">
                   <div class="img-wrap">
@@ -328,7 +328,7 @@
                       <span class="price">7 600 p.</span>
                     </a>  
                   </div>
-                  <a href="#" class="catalog-button">Добавить в корзину</a>
+                  <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>
                 </li>
               </ul>
               <ul class="paging">
