--- a/app/product.html
+++ b/app/product.html
@@ -131,14 +131,14 @@
   </header>
   
   <main class="main product-page">
-    
+
     <div class="page-content">
       <div class="container">
         <div class="row">
-        <ul class="breadcrumb-list clearfix">
-          <li><a href="">Каталог</a></li>
-          <li><a href="">Постельное белье</a></li>
-        </ul>       
+          <ul class="breadcrumb-list clearfix">
+            <li><a href="">Каталог</a></li>
+            <li><a href="">Постельное белье</a></li>
+          </ul>       
           <div class="left-column">
             <div class="slider-wrap">
               <div class="product-slider-for">
@@ -184,28 +184,28 @@
                 <li class="product-filter-item">
                   <p class="filter-title info-title">Пододеяльник</p>
                   <select>
-                    <option value="1">110*215</option>                    
-                    <option value="2">110*220</option>
-                    <option value="3">110*225</option>
-                    <option value="4">110*230</option>                    
+                    <option value="1"><a href="">110*215</a></option>                    
+                    <option value="2"><a href="">110*220</a></option>
+                    <option value="3"><a href="">110*225</a></option>
+                    <option value="4"><a href="">110*230</a></option>                    
                   </select>
                 </li>
                 <li class="product-filter-item">
                   <p class="filter-title info-title">Простынь</p>
                   <select>
-                    <option value="1">240*260</option>                    
-                    <option value="2">110*220</option>
-                    <option value="3">110*225</option>
-                    <option value="4">110*230</option>                    
+                    <option value="1"><a href="">240*260</a></option>                    
+                    <option value="2"><a href="">110*220</a></option>
+                    <option value="3"><a href="">110*225</a></option>
+                    <option value="4"><a href="">110*230</a></option>                    
                   </select>
                 </li>
                 <li class="product-filter-item">
                   <p class="filter-title info-title">Наволочки</p>
                   <select>
-                    <option value="1">70*70</option>                    
-                    <option value="2">110*220</option>
-                    <option value="3">110*225</option>
-                    <option value="4">110*230</option>                    
+                    <option value="1"><a href="">70*70</a></option>                    
+                    <option value="2"><a href="">110*220</a></option>
+                    <option value="3"><a href="">110*225</a></option>
+                    <option value="4"><a href="">110*230</a></option>                    
                   </select>
                 </li>
               </ul>
@@ -218,12 +218,170 @@
                     <a class="right-btn">+</a>
                   </div>  
                 </li>
+                <li class="counter-item">
+                  <p class="info-title">Цена</p>
+                  <p class="price-value">7 500 р.</p>
+                </li>  
               </ul>
+              <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>
             </div>
+            <div class="description-tab-block clearfix">
+              <dl class="responsive-tabs clearfix">
+                <dt>Описание</dt>
+                  <dd>                      
+                      <p>Односпальное постельное белье из тонкого хлопка с набивным леопардовым рисунком.Пододеяльник застегивается снизу на потайные металлические кнопки. Одна наволочка. Толщина нити 30. Плотность переплетения 144.</p>
+                  </dd>
+                <dt>Уход</dt>
+                  <dd>                      
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel odio non elit tincidunt placerat. Donec quis dolor eleifend, venenatis urna nec, feugiat purus. Morbi dapibus leo lorem, vel tempor quam euismod ac. Pellentesque elementum ac ante ut gravida.</p>
+                  </dd>
+                </dl>
+              </div>
+            </div>            
           </div>
         </div> 
-      </div>
-    </div>
+      </div> 
+
+      <section class="section-1">
+        <div class="container">
+          <div class="row">
+             <h1 class="content-title">сопутствующие товары</h1>
+             <div class="slider-product-content catalog-block clearfix">
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div>
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div>
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div> 
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div> 
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+             </div>
+          </div>
+        </div>      
+      </section>
+
+     <!-- <section class="section-2">
+         <div class="container">
+           <div class="row">
+             <h1 class="content-title">сопутствующие товары</h1>
+             <div class="slider-product-content-1 catalog-block clearfix">
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div>
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div>
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div> 
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+                <div class="catalog-item">               
+                   <div class="img-wrap">
+                      <a href="#">
+                        <img src="images/calalog-img.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="info-block">
+                      <a href="#">
+                        <span class="art">Артикул 17555</span>
+                        <span class="name">Постельное белье "Two"</span>
+                        <span class="price">7 600 p.</span>
+                      </a>  
+                    </div> 
+                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                </div>
+             </div>
+          </div>
+        </div>      
+      </section>  -->
+      
   </main>
 
   <footer class="footer">
