--- a/app/product.html
+++ b/app/product.html
@@ -245,142 +245,150 @@
       <section class="section-1">
         <div class="container">
           <div class="row">
+            <div class="section-wrap">
              <h1 class="content-title">сопутствующие товары</h1>
-             <div class="slider-product-content catalog-block clearfix">
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div>
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div>
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div> 
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div> 
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-             </div>
+               <div class="slider-product-content catalog-block clearfix">
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div>
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div>
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div> 
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div> 
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>               
+               </div>
+              <a href="" class="prev-button"></a>
+              <a href="" class="next-button"></a>
+            </div>  
           </div>
         </div>      
       </section>
 
-     <!-- <section class="section-2">
-         <div class="container">
-           <div class="row">
-             <h1 class="content-title">сопутствующие товары</h1>
-             <div class="slider-product-content-1 catalog-block clearfix">
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div>
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div>
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div> 
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-                <div class="catalog-item">               
-                   <div class="img-wrap">
-                      <a href="#">
-                        <img src="images/calalog-img.jpg" alt="">
-                      </a>
-                    </div>
-                    <div class="info-block">
-                      <a href="#">
-                        <span class="art">Артикул 17555</span>
-                        <span class="name">Постельное белье "Two"</span>
-                        <span class="price">7 600 p.</span>
-                      </a>  
-                    </div> 
-                    <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
-                </div>
-             </div>
+      <section class="section-2">
+        <div class="container">
+          <div class="row">
+            <div class="section-wrap">
+             <h1 class="content-title">Мы рекомендуем</h1>
+               <div class="slider-product-content catalog-block clearfix">
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div>
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div>
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div> 
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>
+                  <div class="catalog-item">               
+                     <div class="img-wrap">
+                        <a href="#">
+                          <img src="images/calalog-img.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="info-block">
+                        <a href="#">
+                          <span class="art">Артикул 17555</span>
+                          <span class="name">Постельное белье "Two"</span>
+                          <span class="price">7 600 p.</span>
+                        </a>  
+                      </div> 
+                      <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
+                  </div>               
+               </div>
+              <a href="" class="prev-button"></a>
+              <a href="" class="next-button"></a>
+            </div>  
           </div>
         </div>      
-      </section>  -->
+      </section>   
       
   </main>
 
