product-page dev end

--- a/app/product.html
+++ b/app/product.html
@@ -309,8 +309,8 @@
                       <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
                   </div>               
                </div>
-              <a href="" class="prev-button"></a>
-              <a href="" class="next-button"></a>
+              <a class="prev-button"></a>
+              <a class="next-button"></a>
             </div>  
           </div>
         </div>      
@@ -319,7 +319,7 @@
       <section class="section-2">
         <div class="container">
           <div class="row">
-            <div class="section-wrap">
+            <div class="section-wrap">             
              <h1 class="content-title">Мы рекомендуем</h1>
                <div class="slider-product-content catalog-block clearfix">
                   <div class="catalog-item">               
@@ -382,9 +382,9 @@
                       </div> 
                       <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
                   </div>               
-               </div>
-              <a href="" class="prev-button"></a>
-              <a href="" class="next-button"></a>
+               </div> 
+                <a class="prev-button"></a>
+                <a class="next-button"></a>             
             </div>  
           </div>
         </div>      
