news and main fix

--- a/app/news.html
+++ b/app/news.html
@@ -130,24 +130,24 @@
     </div>
   </header>
   
-  <main class="main main-page news-page">
+  <main class="main news-page">
     <section class="section-1 slider-wrap">
       <div class="slider-center-block">
         <h1 class="title">Наши новости</h1>
-        <a href="" class="title-button">Посмотреть коллекцию</a>
+        <p class="title-description">Будьте в курсе наших событий</p>
       </div>
       <div class="head-slider">
         <div class="head-slider-item">
-          <img class="slider-big-img" src="images/img-1.jpg" alt="">
-          <img class="slider-min-img" src="images/img-1-min.jpg" alt="">
+          <img class="slider-big-img" src="images/img-2.jpg" alt="">
+          <img class="slider-min-img" src="images/img-2-min.jpg" alt="">
         </div>
         <div class="head-slider-item">
-          <img class="slider-big-img" src="images/img-1.jpg" alt="">
-          <img class="slider-min-img" src="images/img-1-min.jpg" alt="">
+          <img class="slider-big-img" src="images/img-2.jpg" alt="">
+          <img class="slider-min-img" src="images/img-2-min.jpg" alt="">
         </div>
         <div class="head-slider-item">
-          <img class="slider-big-img" src="images/img-1.jpg" alt="">
-          <img class="slider-min-img" src="images/img-1-min.jpg" alt="">
+          <img class="slider-big-img" src="images/img-2.jpg" alt="">
+          <img class="slider-min-img" src="images/img-2-min.jpg" alt="">
         </div>
       </div>
     </section>
@@ -159,7 +159,7 @@
             <ul class="content-list">
               <li class="content-item">
                 <div class="img-wrap">
-                  <img src="images/calalog-img.jpg" alt="">
+                  <img src="images/img-2-min.jpg" alt="">
                 </div>
                 <div class="news-text-block">
                   <p class="news-title">Название новости</p>
@@ -169,7 +169,7 @@
               </li>
                <li class="content-item">
                 <div class="img-wrap">
-                  <img src="images/calalog-img.jpg" alt="">
+                  <img src="images/img-1-min.jpg" alt="">
                 </div>
                 <div class="news-text-block">
                   <p class="news-title">Название новости</p>
