--- a/app/product.html
+++ b/app/product.html
@@ -383,8 +383,8 @@
                       <a href="#" class="catalog-button"><i class="icon icon-button"></i>Добавить в корзину</a>      
                   </div>               
                </div> 
-                <a class="prev-button"></a>
-                <a class="next-button"></a>             
+                <a class="prev-button-bot"></a>
+                <a class="next-button-bot"></a>             
             </div>  
           </div>
         </div>      
