--- a/app/product.html
+++ b/app/product.html
@@ -321,7 +321,7 @@
           <div class="row">
             <div class="section-wrap">             
              <h1 class="content-title">Мы рекомендуем</h1>
-               <div class="slider-product-content catalog-block clearfix">
+               <div class="slider-product-content-1 catalog-block clearfix">
                   <div class="catalog-item">               
                      <div class="img-wrap">
                         <a href="#">
